<?xml version="1.0"?>
<package>
  <name>rebvo</name>
  <version>0.1.0</version>
  <description>ROS wrapper for rebvoLib (Realtime Edge Based Visual Odometry Library)   package</description>

  <author email="juan.tarrio@gmail.com">Juan Tarrio</author>
  <author email="claus.smitt@ib.edu.ar">Claus Smitt</author>
  <maintainer email="claus.smitt@ib.edu.ar">L_vis</maintainer>

  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rebvo</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>gencpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>gencpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>


  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
  
</package>
